<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="昵称"
                android:textSize="20dp"
                app:layout_constraintEnd_toStartOf="@+id/register_tv_nickName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/register_tv_nickName"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLength="10"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="姓名"
                android:textSize="20dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <EditText
                android:id="@+id/register_tv_realName"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLength="10"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="性别"
                android:textSize="20dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RadioGroup
                android:id="@+id/register_rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/register_tv_realName"
                app:layout_constraintTop_toTopOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/register_rbtn_man"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:text="男" />

                <RadioButton
                    android:id="@+id/register_rbtn_woman"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:text="女" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="年龄"
                android:textSize="20dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/register_tv_age"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:inputType="number|numberDecimal"
                android:maxLength="3"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="身份"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <RadioGroup
                android:id="@+id/register_rg_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/register_tv_age"
                app:layout_constraintTop_toTopOf="@id/textView5"
                tools:layout_editor_absoluteY="470dp">

                <RadioButton
                    android:id="@+id/register_rbtn_teacher"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:text="教师" />

                <RadioButton
                    android:id="@+id/register_rbtn_student"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:text="学生" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="学校"
                android:textSize="20dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/register_tv_school"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="院系"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/register_tv_department"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="邮箱"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLength="128"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="密码"
                android:textSize="20dp"
                app:layout_constraintEnd_toStartOf="@+id/register_pwd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/register_pwd"
                android:layout_width="250dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9" />


            <EditText
                android:id="@+id/register_captcha"
                android:layout_width="190dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_captcha"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/btn_sendCaptcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/button_sendCaptcha"
                app:layout_constraintStart_toEndOf="@+id/register_captcha"
                app:layout_constraintTop_toTopOf="@+id/register_captcha" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:enabled="true"
                android:text="@string/action_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_captcha" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>